--- a/prjTesteEvertec.dproj
+++ b/prjTesteEvertec.dproj
@@ -182,6 +182,15 @@
                 <Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k290.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclofficexp290.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Program Files (x86)\Fast Reports\VCL\2026.1.5\Trial\LibRS29\VCL\Win32\dclfrxIBX29.bpl">FastReport VCL - IBX Components by Fast Reports Inc</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Program Files (x86)\Fast Reports\VCL\2026.1.5\Trial\LibRS29\VCL\Win32\dclfrxReportConverters29.bpl">FastReport VCL - Converters by Fast Reports Inc</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Program Files (x86)\Fast Reports\VCL\2026.1.5\Trial\LibRS29\VCL\Win32\dclfrxTee29.bpl">FastReport VCL - Tee Components by Fast Reports Inc</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Program Files (x86)\Fast Reports\VCL\2026.1.5\Trial\LibRS29\VCL\Win32\dclfsIBX29.bpl">FastScript VCL - IBX Components by Fast Reports Inc</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Program Files (x86)\Fast Reports\VCL\2026.1.5\Trial\LibRS29\VCL\Win32\dclfsTee29.bpl">FastScript VCL - Tee Components by Fast Reports Inc</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Program Files (x86)\Fast Reports\VCL\2026.1.5\Trial\LibRS29\VCL\Win32\frxADOQueryBuilder29.bpl">FastReport VCL - FastQueryBuilder - ADO by Fast Reports Inc</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Program Files (x86)\Fast Reports\VCL\2026.1.5\Trial\LibRS29\VCL\Win32\frxDBXQueryBuilder29.bpl">FastReport VCL - FastQueryBuilder - DBX by Fast Reports Inc</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Program Files (x86)\Fast Reports\VCL\2026.1.5\Trial\LibRS29\VCL\Win32\frxFDQueryBuilder29.bpl">FastReport VCL - FastQueryBuilder - FireDAC by Fast Reports Inc</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Program Files (x86)\Fast Reports\VCL\2026.1.5\Trial\LibRS29\VCL\Win32\frxIBXQueryBuilder29.bpl">FastReport VCL - FastQueryBuilder - IBX by Fast Reports Inc</Excluded_Packages>
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="4">
